--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.4.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "vite": "^3.2.3"
   },
   "devDependencies": {
