--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posua-2023",
+  "name": "guidance-grid",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-lottie": "^1.2.3",
+    "react-lottie-player": "^1.5.4",
     "react-router-dom": "^6.4.3",
     "vite": "^3.2.3"
   },
