--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-lottie-player": "^1.5.4",
     "react-router-dom": "^6.4.3",
     "react-slick": "^0.29.0",
