--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@vitejs/plugin-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-lazy-load-image-component": "^1.5.6",
+    "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-lottie-player": "^1.5.4",
     "react-router-dom": "^6.4.3",
     "react-slick": "^0.29.0",
+    "react-use": "^17.4.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.0.5",
     "vite": "^3.2.3"
