--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hover-slideshow": "^2.1.12",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-lottie-player": "^1.5.4",
